# Minesweeper

./: CMakeLists.txt  README.md  license  main.cpp  res.qrc
sources/: about_dialog.cpp  about_dialog.ui  block.cpp  block.ui  block_board.cpp  block_board.ui  bottom_board.cpp  bottom_board.ui  custom_dialog.cpp  custom_dialog.ui  game_over_dialog.cpp  game_over_dialog.ui  main_window.cpp  main_window.ui  top_board.cpp  top_board.ui  ui_about_dialog.h  ui_bottom_board.h  ui_custom_dialog.h  ui_game_over_dialog.h  ui_main_window.h
sources/headers/: about_dialog.h  block.h  block_board.h  bottom_board.h  const.h  custom_dialog.h  game_over_dialog.h  main_window.h  top_board.h
